...

    var titleView: some View {
        VStack(spacing: 2) {
            Text(viewModel.greeting)
                .font(.headline)
                .foregroundColor(textColor)
                .accessibilityIdentifier("TodayGreeting")
            Text(viewModel.formattedDate)
                .font(.subheadline)
                .foregroundColor(secondaryTextColor)
        }
    }

...
